# tz-benchmark

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  go.work  go.work.sum  pyproject.toml  requirements.txt  requirements_without_numba.txt  tz_test.go  tz_test.py  tz_test_without_numba.py
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: benches.rs  random_city.rs
data/: gt_edges.csv
docs/: data.js
figures/: README.md  go_log_bars.tsv  python_latency_cdf_summary.tsv  python_latency_cdf_timezonefinder_edge.tsv  python_latency_cdf_timezonefinder_random.tsv  python_latency_cdf_tzfpy_edge.tsv  python_latency_cdf_tzfpy_random.tsv  python_latency_violin_timezonefinder_edge.tsv  python_latency_violin_timezonefinder_random.tsv  python_latency_violin_tzfpy_edge.tsv  python_latency_violin_tzfpy_random.tsv  rust_log_bars.tsv
go/: go.mod  go.sum  tz_helper_test.go  tz_test.go
go/accuracy/: main.go
go/internal/cmd/accuracy/: main.go
go/internal/cmd/gridindexeval/: README.md  main.go
go/internal/cmd/memory/: main.go
go/internal/cmd/memory/candidates/defaultfinder/: main.go
go/internal/cmd/memory/candidates/finder/: main.go
go/internal/cmd/memory/candidates/fullfinder/: main.go
go/internal/cmd/memory/candidates/fuzzyfinder/: main.go
go/internal/cmd/memory/candidates/gotz/: main.go
go/internal/cmd/memory/candidates/latlong/: main.go
go/internal/cmd/memory/candidates/localtimezone/: main.go
go/internal/cmd/memory/candidates/noop/: main.go
go/internal/cmd/memory/candidates/timezonemapper/: main.go
go/internal/memprobe/: memprobe.go
python/: README.md  accuracy.py  memory.py  pyproject.toml  requirements.txt  tz_test.py
rust/: Cargo.toml  rust-toolchain.toml
rust/benches/: benches.rs
rust/examples/: accuracy.rs  mem_probe.rs  memory.rs
scripts/: generate_figure_data.py  generate_snapshot_readmes.py  measure_memory.py
snapshot/: README.md
snapshot/2026-04-30-504508aca596fb3a5f0f9cc817edd0e26d0ff553/: README.md  benchmark_result_go.txt  benchmark_result_python.txt  benchmark_result_rust.txt
snapshot/2026-04-30-b894dafea427160ebe41026046961d12eeac85ca/: README.md  benchmark_result_go.txt  benchmark_result_python.txt  benchmark_result_rust.txt
snapshot/2026-05-03-02205f8c406cb55d2e6ccc8b7dc1e27b6555fc47/: README.md  benchmark_result_go.txt  benchmark_result_python.txt  benchmark_result_rust.txt
snapshot/2026-05-03-267604cf2732fdcce33be0f2e73b7dcef0bac500/: README.md  benchmark_result_go.txt  benchmark_result_python.txt  benchmark_result_rust.txt
snapshot/2026-05-04-0b7659e1957245fcddd79b4dd9224fee82b3b0ea/: README.md  benchmark_result_go.txt  benchmark_result_python.txt  benchmark_result_rust.txt
snapshot/2026-07-06-679fe56e5a136400750ddb79695b832cc7cf231c/: README.md  benchmark_result_go.txt  benchmark_result_python.txt
snapshot/2026-07-07-35d67fc6b44d2db8c35475a8757481ec6f2d76c7/: README.md  accuracy_result_python.txt  accuracy_result_rust.txt  benchmark_result_go.txt  benchmark_result_python.txt  benchmark_result_rust.txt
snapshot/2026-07-07-6a4e0c11b11578e33d1e8a7dfce3792474d57a88/: README.md  benchmark_result_go.txt  benchmark_result_python.txt  benchmark_result_rust.txt
snapshot/2026-07-10-2f299755700fa552131fa3957be320936fa41d6d/: README.md  accuracy_result_go.txt  accuracy_result_python.txt  accuracy_result_rust.txt  benchmark_result_go.txt  benchmark_result_python.txt  benchmark_result_rust.txt  memory_result_go.txt  memory_result_python.txt  memory_result_rust.txt
snapshot/2026-07-11-67cf32c444dab10207499dd3e87e2f25248f61f8/: README.md  accuracy_result_go.txt  accuracy_result_python.txt  accuracy_result_rust.txt  benchmark_result_go.txt  benchmark_result_python.txt  benchmark_result_rust.txt  memory_result_go.txt  memory_result_python.txt  memory_result_rust.txt
snapshot/2026-07-12-155d45e684b616d1dd5e113b3908a82224f6a01d/: README.md  accuracy_result_go.txt  accuracy_result_python.txt  accuracy_result_rust.txt  benchmark_result_go.txt  benchmark_result_python.txt  benchmark_result_rust.txt  memory_result_go.txt  memory_result_python.txt  memory_result_rust.txt
snapshot/2026-07-14-91bb3495bd282773baf61eac79a5f258b54d5656/: README.md  accuracy_result_go.txt  accuracy_result_rust.txt  benchmark_result_go.txt  benchmark_result_python.txt  benchmark_result_rust.txt  memory_result_go.txt  memory_result_python.txt  memory_result_rust.txt
