[package]
name = "tz-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tzf-rs = "0.4.3"
cities-json = "*"
tz-search = "0.1.1"
rtz = {version = "0.5.3", features = ["full"]}

[profile.bench]
lto = true
