[package]
name = "tz-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tzf-rs = "0.4.3"
cities-json = "*"
tz-search = "0.1.1"
# rtz = {version = "0.5.3", features = ["full"]}
rtz = { git = "https://github.com/twitchax/rtz", features = [
    "full",
    "self-contained",
], rev = "4ccd2fdfa292b2de3260f221abede8a6525a8437" }

[profile.bench]
lto = true
