[project]
name = "tz-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = "==3.14.*"

dependencies = [
    "citiespy==0.6.13",
    "timezonefinder==8.2.2",
    "tzfpy==1.3.1",
    "pytest",
    "pytest-benchmark",
    "pytest-pretty",
]

# [[tool.uv.index]]
# name = "tzfpy-mirror"
# url = "https://ringsaturn.github.io/tzfpy/simple"
# explicit = true

# [tool.uv.sources]
# tzfpy = { index = "tzfpy-mirror" }
