[package]
name = "tz-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tzf-rs = "1.0.0"
cities-json = "0.6.8"
tz-search = "0.1.1"
# rtz = {version = "0.5.3", features = ["full"]}
rtz = { git = "https://github.com/twitchax/rtz", features = [
    "full",
    "self-contained",
], rev = "021eab5" }
zone-detect = "1.1.0"
spatialtime = { version = "0.2.3", features = ["osm", "ned"]}

[profile.bench]
lto = true
