[package]
name = "tz-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tzf-rs = "1.0.0"
cities-json = "0.6.8"
tz-search = "0.1.1"

rtz = { version = "0.7.1", features = [
    "full",
    "self-contained",
]}

spatialtime = { version = "0.2.2", features = ["osm", "ned"]}
zone-detect = "1.1.0"


[profile.bench]
lto = true
