[package]
name = "tz-benchmark"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tzf-rs = "1.3.3"
cities-json = "0.6.8"
tz-search = "0.1.1"
# A self-maintained fork, since upsteam is not compatible with other packages.
rtz = { git = "https://github.com/ringsaturn/rtz", branch = "benchmark" ,features = [
    "full",
    "self-contained",
]}
zone-detect = "1.1.0"
spatialtime = { version = "0.3.0", features = ["osm", "ned"]}

[dev-dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"

[profile.bench]
lto = true
